@@ -527,6 +527,9 @@ IMPROVEMENTS:
   ZOOKEEPER-2557: Update gitignore to account for other file extensions.
   (Edward Ribeiro via cnauroth)
 
+  ZOOKEEPER-2594: Use TLS for downloading artifacts during build
+  (Olaf Flebbe via phunt)
+
 Release 3.5.0 - 8/4/2014
 
 NEW FEATURES:
